Remove support for 10.1, add support for 10.4 (tested with basic test.sh script).

--- a/Dockerfile-10.5
+++ b/Dockerfile-10.5
@@ -1,4 +1,4 @@
-FROM mariadb:10.3
+FROM mariadb:10.5
 
 # Download blocked from http://www.quicklz.com/qpress-11-linux-x64.tar
 COPY bin/qpress-11-linux-x64.tar /tmp/qpress.tar
@@ -9,7 +9,6 @@ RUN set -x \
       curl \
       netcat \
       pigz \
-      percona-toolkit \
       pv \
     && tar -C /usr/local/bin -xf /tmp/qpress.tar qpress \
     && chmod +x /usr/local/bin/qpress \
@@ -24,6 +23,8 @@ RUN set -ex ;\
     # Fix permissions
     chown -R mysql:mysql /etc/mysql ;\
     chmod -R go-w /etc/mysql ;\
+    # Remove auth_socket config - already enabled in 10.4 by default
+    rm /etc/mysql/conf.d/31-auth-socket.cnf ;\
     # Disable code that deletes progress file after SST
     sed -i 's#-p \$progress#-p \$progress-XXX#' /usr/bin/wsrep_sst_mariabackup
 
