--- a/Dockerfile-10.11
+++ b/Dockerfile-10.11
@@ -1,4 +1,4 @@
-FROM mariadb:10.1
+FROM mariadb:10.11-rc
 
 # Download blocked from http://www.quicklz.com/qpress-11-linux-x64.tar
 COPY bin/qpress-11-linux-x64.tar /tmp/qpress.tar
@@ -9,8 +9,6 @@ RUN set -x \
       curl \
       netcat \
       pigz \
-      percona-toolkit \
-      percona-xtrabackup \
       pv \
     && tar -C /usr/local/bin -xf /tmp/qpress.tar qpress \
     && chmod +x /usr/local/bin/qpress \
@@ -25,14 +23,15 @@ RUN set -ex ;\
     # Fix permissions
     chown -R mysql:mysql /etc/mysql ;\
     chmod -R go-w /etc/mysql ;\
+    # Remove auth_socket config - already enabled in 10.4 by default
+    rm /etc/mysql/conf.d/31-auth-socket.cnf ;\
     # Disable code that deletes progress file after SST
-    sed -i 's#-p \$progress#-p \$progress-XXX#' /usr/bin/wsrep_sst_mariabackup ;\
-    sed -i 's#-p \$progress#-p \$progress-XXX#' /usr/bin/wsrep_sst_xtrabackup
+    sed -i 's#-p \$progress#-p \$progress-XXX#' /usr/bin/wsrep_sst_mariabackup
 
 EXPOSE 3306 4444 4567 4567/udp 4568 8080 8081
 
 HEALTHCHECK CMD /usr/local/bin/healthcheck.sh
 
-ENV SST_METHOD=xtrabackup-v2
+ENV SST_METHOD=mariabackup
 
 ENTRYPOINT ["start.sh"]
