Remove Dockerfiles for unsupported versions, build lastest minor versions for up to 10.11. Add third node to test.sh

--- a/Dockerfile-10.11
+++ b/Dockerfile-10.11
@@ -1,4 +1,4 @@
-FROM mariadb:10.11-rc
+FROM mariadb:10.11
 
 # Download blocked from http://www.quicklz.com/qpress-11-linux-x64.tar
 COPY bin/qpress-11-linux-x64.tar /tmp/qpress.tar
